--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "veni/module-cartpricerulesqualifier",
+    "name": "veni/module-cartrulesreport",
     "description": "",
     "license": "proprietary",
     "authors": [
@@ -15,7 +15,7 @@
             "registration.php"
         ],
         "psr-4": {
-            "Veni\\CartPriceRulesQualifier\\": ""
+            "Veni\\CartRulesReport\\": ""
         }
     }
 }
